# DirAnalyze

./: LICENSE  README.md  index.html
backend/: .diranalyze_db.sqlite3  Cargo.toml
backend/src/: db_manage.rs  main.rs  version_control.rs
css/: base.css  components.css  layout.css  modals.css  responsive.css  styles.css  viewer.css
docs/: 03_VERSIONING_SYSTEM_ARCHITECTURE.md  05_ROADMAP_AND_CHANGELOG.md  07_CURRENT_DEVELOPMENT_TASK.md  blueteam.md  compliance-privacy.md  final-reflection.md  git_conventions.md  human-ux.md  idea-validator.md  language-support-addendum.md  redteam.md  roadmap.md  tasks.yaml
experiments/signature_first_context_strategy/: README.md  signature_extractor_v1.py
js/: aiBriefingStudio.js  aiDebriefingAssistant.js  aiPatcher.js  analysisEngine.js  combineMode.js  errorHandler.js  fileEditor.js  fileSystem.js  fileViewer.js  main.js  scaffoldImporter.js  statsManager.js  treeView.js  uiManager.js  utils.js
js/lib/: acorn.js  codemirror.min.js
